--- a/index.html
+++ b/index.html
@@ -130,14 +130,9 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
         <ul class="w3-ul w3-hoverable w3-white">
           <li class="w3-padding-16">
-            <span class="w3-large">Nike SB Dunks: The Comeback</span>
+            <span class="w3-large">Home</span>
             <br>
-            <span>The return of a staple in the sneaker game</span>
-          </li>
-          <li class="w3-padding-16">
-            <span class="w3-large">Introduction</span>
-            <br>
-            <span>A little background on who I am</span>
+            <span>The HypeLoop</span>
           </li>
         </ul>
       </div>
