--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
         <ul class="w3-ul w3-hoverable w3-white">
           <li class="w3-padding-16">
-            <span class="w3-large">Nike SB Dunks: The Comeback</span>
+            <span class="w3-large"><a href="index.html">Nike: SB Dunks: The Comeback</a></span>
             <br>
             <span>The return of a staple in the sneaker game</span>
           </li>
