--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
         <ul class="w3-ul w3-hoverable w3-white">
           <li class="w3-padding-16">
-            <span class="w3-large">Home</span>
+            <span class="w3-large"><a href="blog.html">Home</a></span>
             <br>
             <span>The HypeLoop</span>
           </li>
