--- a/blog.html
+++ b/blog.html
@@ -93,7 +93,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <li class="w3-padding-16">
             <span class="w3-large"><a href="index.html">Home</a></span>
             <br>
-            <span>The HYPELOOP</span>
+            <span>Welcome to the HYPELOOP</span>
           </li>
         </ul>
       </div>
