--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-col l4">
       <!-- About Card -->
       <div class="w3-white w3-margin">
-        <img src="https://mail.google.com/mail/u/0?ui=2&ik=b9abd5514c&attid=0.2&permmsgid=msg-f:1663528616590620385&th=17160a768994b6e1&view=att&disp=safe&realattid=b6468583e8dc3d08_0.2" alt="Jane" style="width:100%" class="w3-grayscale">
+        <img src="IMG-1467.jpg" alt="Jane" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
           <h4>Background</h4>
           <p>Hey, my name's Lucas. Welcome to my fashion blog! I've loved fashion for many years now and hope to share my enthusiasm with the world whrough this site.</p>
